--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/avatar"
             android:layout_width="130dp"
             android:layout_height="130dp"
@@ -23,6 +23,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/name"
             android:text="Tam Nguyen"
+            android:textColor="@color/black"
+            android:textSize="20sp"
             android:fontFamily="sans-serif-medium"
             android:layout_gravity="center"
             android:textStyle="bold"/>
@@ -72,8 +74,7 @@
         android:id="@+id/reminder"
         android:layout_margin="8dp"
         android:layout_gravity="center"
-        android:src="@drawable/reminder"
-        />
+        android:src="@drawable/reminder" />
 
 
 
