--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#fc4c02</color>
     <color name="colorPrimaryDark">#fc4c02</color>
     <color name="colorAccent">#fc4c02</color>
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
 </resources>
