--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,4 +10,28 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="BoldText">
+        <item name="fontFamily">@font/bold</item>
+    </style>
+    <style name="Title">
+        <item name="fontFamily">@font/text</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    <style name="NormalText">
+        <item name="fontFamily">@font/text</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+    <style name="OrangeText" parent="NormalText">
+        <item name="android:textColor">@color/colorPrimary</item>
+    </style>
+    <style name="Toolbar">
+        <item name="fontFamily">@font/bold</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+    <style name="Tab" parent="Toolbar">
+        <item name="android:textSize">14sp</item>
+    </style>
 </resources>
