--- a/app/src/main/res/layout/profile_tab_fragment.xml
+++ b/app/src/main/res/layout/profile_tab_fragment.xml
@@ -9,7 +9,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <LinearLayout
@@ -58,7 +58,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:id="@+id/follow">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -76,6 +77,13 @@
                 android:textAppearance="@style/NormalText"
                 android:textAlignment="center" />
         </LinearLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:id="@+id/activities"/>
+
     </LinearLayout>
 
     <LinearLayout
