--- a/app/src/main/res/layout/running_activity_items_layout.xml
+++ b/app/src/main/res/layout/running_activity_items_layout.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:layout_marginBottom="12dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -92,5 +95,41 @@
         android:src="@drawable/p1"
         android:id="@+id/p1ID"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_marginTop="8dp"
+        android:orientation="horizontal">
+        <ImageView
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="#10808080"
+            android:tint="@color/colorPrimary"
+            android:src="@drawable/like"
+            android:padding="4dp"/>
+        <View
+            android:layout_width="2dp"
+            android:layout_height="match_parent"/>
+        <ImageView
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="#10808080"
+            android:tint="@color/colorPrimary"
+            android:padding="4dp"
+            android:src="@drawable/comment"/>
+        <View
+            android:layout_width="2dp"
+            android:layout_height="match_parent"/>
+        <ImageView
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="#10808080"
+            android:tint="@color/colorPrimary"
+            android:padding="4dp"
+            android:src="@drawable/share"/>
+    </LinearLayout>
 
 </LinearLayout>
