--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,16 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="android:imageButtonStyle">@style/Widget.AppCompat.Button.Borderless</item>
     </style>
+    
+    <style name="LightImageButton" parent="Widget.MaterialComponents.TimePicker.ImageButton">
+        <item name="backgroundTint">#20808080</item>
+        <item name="android:tint">@color/colorPrimary</item>
+        <item name="imageButtonStyle">@style/Widget.AppCompat.Button.Borderless</item>
+    </style>
+    
+    
 
     <style name="BoldText">
         <item name="fontFamily">@font/bold</item>
