--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,34 +5,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-    <androidx.appcompat.widget.Toolbar
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/toolbar"
-        android:background="@color/colorPrimary"
-        app:title="My Strava"
-        app:titleTextAppearance="@style/Toolbar"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="vertical"
-        android:layout_alignTop="@id/toolbar"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"/>
+        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
+        style="@style/BottomNavigationView"
         android:layout_width="match_parent"
         android:layout_height="60dp"
+        app:itemIconSize="24dp"
+        app:itemTextAppearanceActive="@style/NormalText"
+        app:itemTextAppearanceInactive="@style/TimeAddress"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:menu="@menu/nav_menu"
-        app:backgroundTint="@color/colorPrimary"
-        android:alpha="100"
-        android:foregroundTint="@color/white"
-        app:itemIconTint="@color/white"
-        app:itemTextColor="@color/white"
-        android:backgroundTint="@color/white"/>
+        app:menu="@menu/nav_menu" />
 </androidx.constraintlayout.widget.ConstraintLayout>
