--- a/app/src/main/res/layout/activity_new_challenge.xml
+++ b/app/src/main/res/layout/activity_new_challenge.xml
@@ -4,18 +4,157 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".metab.challengestab.NewChallengeActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".metab.challengestab.NewChallengeActivity">
 
     <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
-        app:title="Challenges"
         app:subtitle="Add a new challenge"
-        app:titleTextAppearance="@style/Toolbar"
-        app:subtitleTextAppearance="@style/NormalText"/>
+        app:subtitleTextAppearance="@style/NormalText"
+        app:title="Challenges"
+        app:titleTextAppearance="@style/Toolbar" />
 
+    <TextView
+        style="@style/OrangeText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:labelFor="@+id/challenge_type"
+        android:paddingStart="15dp"
+        android:paddingTop="15dp"
+        android:paddingEnd="15dp"
+        android:text="Challenges type:" />
 
+    <RadioGroup
+        android:id="@+id/challenge_type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingStart="15dp">
+
+        <RadioButton
+            android:id="@+id/distance_challenge"
+            style="@style/NormalText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:text="Running distance" />
+
+        <RadioButton
+            android:id="@+id/steps_challenge"
+            style="@style/NormalText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Running steps" />
+    </RadioGroup>
+
+    <TextView
+        style="@style/OrangeText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:labelFor="@+id/challenge_title"
+        android:paddingStart="15dp"
+        android:paddingTop="15dp"
+        android:paddingEnd="15dp"
+        android:text="Title:" />
+
+    <EditText
+        android:id="@+id/challenge_title"
+        style="@style/NormalText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:hint="My runnning distance challenge"
+        android:text="" />
+
+    <TextView
+        style="@style/OrangeText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:labelFor="@+id/challenge_target"
+        android:paddingStart="15dp"
+        android:paddingTop="15dp"
+        android:paddingEnd="15dp"
+        android:text="Target:" />
+
+    <com.google.android.material.slider.RangeSlider
+        android:id="@+id/slider"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/challenge_target"
+            android:layout_width="120dp"
+            android:textAlignment="center"
+            style="@style/NormalText"
+            android:text="10"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp" />
+
+        <TextView
+            android:id="@+id/target_unit"
+            style="@style/NormalText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="km" />
+    </LinearLayout>
+
+    <TextView
+        style="@style/OrangeText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:labelFor="@+id/challenge_target"
+        android:paddingStart="15dp"
+        android:paddingTop="15dp"
+        android:paddingEnd="15dp"
+        android:text="Deadline:" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+        <NumberPicker
+            android:id="@+id/day"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:theme="@style/NormalText"/>
+        <NumberPicker
+            android:id="@+id/month"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:theme="@style/NormalText"/>
+        <NumberPicker
+            android:id="@+id/year"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:theme="@style/NormalText"
+            android:divider="@color/colorPrimary"/>
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/add_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:text="Add"
+        android:shadowRadius="10.0"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"/>
 
 </LinearLayout>
