--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#fc4c02</color>
-    <color name="colorPrimaryDark">#fc4c02</color>
-    <color name="colorAccent">#fc4c02</color>
+    <color name="colorPrimaryDark">#C83E03</color>
+    <color name="colorAccent">#90fc4c02</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
 </resources>
