--- a/app/src/main/res/layout/fragment_statistics_tab.xml
+++ b/app/src/main/res/layout/fragment_statistics_tab.xml
@@ -10,6 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="8dp"
         android:orientation="vertical">
         <TextView
             android:layout_width="match_parent"
@@ -30,6 +31,7 @@
                 android:textAlignment="textStart"
                 style="@style/cell_properties"/>
             <TextView
+                android:id="@+id/week_runs"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="1"
@@ -44,6 +46,7 @@
                 android:textAlignment="textStart"
                 style="@style/cell_properties"/>
             <TextView
+                android:id="@+id/week_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="0h 31m"
@@ -58,6 +61,7 @@
                 android:textAlignment="textStart"
                 style="@style/cell_properties"/>
             <TextView
+                android:id="@+id/week_dist"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="2 km"
@@ -84,6 +88,7 @@
                 android:textAlignment="textStart"
                 style="@style/cell_properties"/>
             <TextView
+                android:id="@+id/year_runs"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="25"
@@ -98,6 +103,7 @@
                 android:textAlignment="textStart"
                 style="@style/cell_properties"/>
             <TextView
+                android:id="@+id/year_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="15h 32m"
@@ -112,23 +118,10 @@
                 android:textAlignment="textStart"
                 style="@style/cell_properties"/>
             <TextView
+                android:id="@+id/year_dist"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="108 km"
-                android:textAlignment="textEnd"
-                android:layout_columnWeight="1"
-                style="@style/cell_properties"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Elevation Gain"
-                android:layout_columnWeight="1"
-                android:textAlignment="textStart"
-                style="@style/cell_properties"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="499 m"
                 android:textAlignment="textEnd"
                 android:layout_columnWeight="1"
                 style="@style/cell_properties"/>
@@ -152,9 +145,25 @@
                 android:textAlignment="textStart"
                 style="@style/cell_properties"/>
             <TextView
+                android:id="@+id/all_runs"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="65"
+                android:textAlignment="textEnd"
+                android:layout_columnWeight="1"
+                style="@style/cell_properties"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Time"
+                android:layout_columnWeight="1"
+                android:textAlignment="textStart"
+                style="@style/cell_properties"/>
+            <TextView
+                android:id="@+id/all_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="15h 32m"
                 android:textAlignment="textEnd"
                 android:layout_columnWeight="1"
                 style="@style/cell_properties"/>
@@ -166,6 +175,7 @@
                 android:textAlignment="textStart"
                 style="@style/cell_properties"/>
             <TextView
+                android:id="@+id/all_dist"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="293 km"
