--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -70,11 +70,12 @@
         <item name="android:textSize">14sp</item>
     </style>
 
-    <style name="header">
+    <style name="header" parent="Title">
         <item name="android:padding">7dp</item>
+        <item name="android:layout_marginStart">10dp</item>
         <item name="android:textSize">17sp</item>
     </style>
-    <style name="cell_properties">
+    <style name="cell_properties" parent="NormalText">
         <item name="android:padding">10dp</item>
         <item name="android:textSize">15sp</item>
     </style>
