--- a/app/src/main/res/layout/challenge_layout.xml
+++ b/app/src/main/res/layout/challenge_layout.xml
@@ -61,15 +61,30 @@
             android:layout_alignParentEnd="true"/>
     </RelativeLayout>
 
-    <TextView
-        android:id="@+id/deadline"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="textEnd"
-        android:text="Ends in 2 days"
-        android:paddingEnd="15dp"
-        android:paddingTop="4dp"
-        style="@style/OrangeText"/>
+        android:layout_marginTop="4dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp">
+
+        <TextView
+            android:id="@+id/startdate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Started 2 days ago"
+            android:layout_alignParentStart="true"
+            style="@style/OrangeText"/>
+        <TextView
+            android:id="@+id/deadline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Ends in 2 days"
+            android:layout_alignParentEnd="true"
+            style="@style/OrangeText"/>
+
+    </RelativeLayout>
+
 
 
 
