--- a/app/src/main/res/layout/running_activity_items_layout.xml
+++ b/app/src/main/res/layout/running_activity_items_layout.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/avatar"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_margin="15dp"
