Detailed Run Activity

--- a/app/src/main/res/layout/running_activity_items_layout.xml
+++ b/app/src/main/res/layout/running_activity_items_layout.xml
@@ -100,7 +100,7 @@
         android:layout_height="250dp"
         android:scaleType="centerCrop"
         android:layout_marginTop="15dp"
-        android:src="@drawable/p1"
+        android:src="@drawable/distance_challenge"
         android:id="@+id/p1ID"/>
 
     <LinearLayout
